Update pattern alignment & Managed site colors scheme apply via variables

--- a/assets/css/_elements.css
+++ b/assets/css/_elements.css
@@ -22,7 +22,7 @@ html {
 
 /* stylelint-disable */
 body {
-	background: #fafafa;
+	background: var(--color-theme-body);
 	/* Fallback for when there is no custom background color defined. */
 }
 /* stylelint-enable */
