--- a/assets/css/_custom-properties.css
+++ b/assets/css/_custom-properties.css
@@ -15,6 +15,7 @@
     --dropdown-symbol-width: 0.7em;
     /* Custom editor colors */
     --color-theme-primary: #ef5455;
+    --color-theme-loader: #ef5455;
     --color-theme-secondary: #41848f;
     --color-theme-red: #c0392b;
     --color-theme-green: #27ae60;
@@ -25,16 +26,35 @@
     --color-theme-white: #ecf0f1;
     --color-custom-daylight: #97c0b7;
     --color-custom-sun: #eee9d1;
+    --color-site-title-hover: #ee4036;
+    --color-theme-body: #f7f7f9;
+    --color-layout-boxed: #fff;
+    --color-theme-white-box: #fff;
+    --global-body-lightcolor: #fafafa;
+    --color-header-bg: #fff;
+    --color-menu-hover: #ee4036;
+    --color-menu-active: #ee4036;
     --color-link: #111;
     --color-link-hover: #ef5455;
     --color-link-active: #ef5455;
     --global-border-color: #e8e8e8;
-    --button_background_color: #ef5455;
-    --button_background_hover_color: #f83939;
-    --button_border_color: #ef5455;
-    --button_border_hover_color: #f83939;
+    --button-text-color: #fff;
+    --button-text-hover-color: #fff;
+    --button-background-color: #ef5455;
+    --button-background-hover-color: #f83939;
+    --button-border-color: #ef5455;
+    --button-border-hover-color: #f83939;
     --color-quote-border: #111;
     --color-quote-citation: #6c7781;
+
+    --color-footer-title: #111111;
+    --color-footer-content: #505050;
+    --color-footer-link: #111111;
+    --color-footer-link-hover: #ef5455;
+    --color-copyright-bg: #ffffff;
+    --color-copyright-content: #505050;
+    --color-copyright-link: #111111;
+    --color-copyright-link-hover: #ef5455;
     /* Custom editor font sizes */
     --font-size-small: calc(16 / var(--global-font-size) * 1rem);
     --font-size-regular: calc(var(--global-font-size) / 16 * 1rem);
