--- a/assets/css/buddypress.css
+++ b/assets/css/buddypress.css
@@ -188,11 +188,13 @@ button.group-button,
 .avatar-history-actions button.delete.disabled,
 #buddypress #header-cover-image .header-cover-reposition-wrap>.button,
 .buddypress .buddypress-wrap button.gamipress-achievement-unlock-with-points-button,
-button.gamipress-achievement-unlock-with-points-button {
+button.gamipress-achievement-unlock-with-points-button,
+.buddypress .buddypress-wrap button.ges-change,
+.buddypress .buddypress-wrap button.group-email-tooltip__close {
     font-family: inherit;
     font-size: initial;
-    color: #fff;
-    background-color: var(--button_background_color);
+    color: var(--button-text-color);
+    background-color: var(--button-background-color);
     border-radius: var(--button-border-radius) !important;
     padding: 8px 20px;
     font-weight: 700;
@@ -202,7 +204,7 @@ button.gamipress-achievement-unlock-with-points-button {
     cursor: pointer;
     display: inline-block;
     line-height: 1.3;
-    border: 1px solid var(--button_border_color);
+    border: 1px solid var(--button-border-color);
     outline: 0;
     vertical-align: middle;
     -webkit-appearance: none;
@@ -254,10 +256,12 @@ button.group-button:hover,
 #buddypress #header-cover-image .header-cover-reposition-wrap>.button:hover,
 #buddypress #header-cover-image .header-cover-reposition-wrap>.button:focus,
 .buddypress .buddypress-wrap button.gamipress-achievement-unlock-with-points-button:hover,
-button.gamipress-achievement-unlock-with-points-button:hover {
-    background-color: var(--button_background_hover_color);
-    border: 1px solid var(--button_border_hover_color);
-    color: #fff;
+button.gamipress-achievement-unlock-with-points-button:hover,
+.buddypress .buddypress-wrap button.ges-change:hover,
+.buddypress .buddypress-wrap button.group-email-tooltip__close:hover {
+    background-color: var(--button-background-hover-color);
+    border: 1px solid var(--button-border-hover-color);
+    color: var(--button-text-hover-color);
 }
 
 .buddypress .buddypress-wrap button.text-button:focus,
@@ -354,7 +358,7 @@ body.buddypress #buddypress.buddypress-wrap .html-active button.switch-html {
 }
 
 .buddypress .avatar,
-.grid > li .item-avatar .avatar {
+.grid>li .item-avatar .avatar {
     border-radius: 3px;
 }
 
@@ -393,7 +397,7 @@ body:not(.round-avatars) .grid .member-status {
 .buddypress-wrap .bp-navs li:not(.selected) a:focus,
 .buddypress-wrap .bp-navs li:not(.selected) a:hover {
     background: transparent;
-    color: var(--color-link-hover);
+    color: var(--color-theme-primary);
 }
 
 .buddypress-wrap .bp-navs li.current a,
@@ -403,14 +407,19 @@ body:not(.round-avatars) .grid .member-status {
 .buddypress-wrap .bp-navs li.selected a:focus,
 .buddypress-wrap .bp-navs li.selected a:hover {
     background: transparent;
-    color: var(--color-link-hover);
+    color: var(--color-theme-primary);
 }
 
 .buddypress-wrap .bp-navs li.current a,
 .buddypress-wrap .bp-navs li.selected a {
     background: transparent;
-    border-bottom: 1px solid var(--color-link-active);
+    border-bottom: 1px solid var(--color-theme-primary);
     font-weight: 500;
+}
+
+.buddypress-wrap .bp-navs li.selected a,
+.avatar-history-table td .avatar.selected {
+    border-color: var(--color-theme-primary);
 }
 
 .bp-navs.bp-navs {
@@ -496,7 +505,7 @@ body.media .buddypress-wrap.bp-dir-hori-nav ul.subnav {
 
 .bp-navs ul li .count,
 .buddypress-wrap .bp-navs li.dynamic a .count {
-    background: #C8CBCF;
+    background: var(--color-theme-primary);
     box-shadow: none;
     border-radius: 100px;
     font-size: 11px;
@@ -522,7 +531,26 @@ body.media .buddypress-wrap.bp-dir-hori-nav ul.subnav {
 .buddypress-wrap .bp-navs li.selected a .count,
 .buddypress_object_nav .bp-navs li.current a .count,
 .buddypress_object_nav .bp-navs li.selected a .count {
-    background-color: var(--color-link-active);
+    background-color: var(--color-theme-primary);
+}
+
+
+.buddypress-wrap .bp-navs li.dynamic.selected a .count,
+.buddypress_object_nav .bp-navs li.dynamic a .count,
+.buddypress_object_nav .bp-navs li.dynamic.current a .count,
+.buddypress_object_nav .bp-navs li.dynamic.selected a .count {
+    background-color: var(--color-theme-primary);
+}
+
+
+.bp-single-vert-nav .bp-navs.vertical li span,
+.buddypress-wrap .bp-navs li.dynamic a:hover .count,
+.buddypress_object_nav .bp-navs li.dynamic a:hover .count,
+.buddypress-wrap .rtm-bp-navs ul li.selected a:hover>span,
+.buddypress-wrap .rtm-bp-navs ul li.selected a>span,
+.users-header .bp-member-type,
+.single-headers .group-status .group-type {
+    background-color: var(--color-theme-primary);
 }
 
 .buddypress #buddypress.bp-dir-hori-nav .create-button a,
@@ -644,6 +672,12 @@ body .buddypress-wrap form.bp-messages-search-form input[type="search"],
 /*--------------------------------------------------------------
 # rtMedia Specific
 --------------------------------------------------------------*/
+.rtmedia-actions-before-comments .rtmedia-comment-link:hover,
+.rtmedia-actions-before-comments .rtmedia-view-conversation:hover,
+#buddypress .rtmedia-actions-before-comments .rtmedia-like:hover {
+    color: var(--color-theme-primary);
+}
+
 div#rtmedia-action-update>span {
     display: none;
 }
@@ -851,7 +885,7 @@ body.bp-nouveau .activity-update-form .rtmedia-plupload-container {
 
 .buddypress-wrap .rtm-bp-navs ul li.selected a>span,
 .buddypress-wrap .rtm-bp-navs ul li.selected a:hover>span {
-    background: var(--color-link-active);
+    background: var(--color-theme-primary);
     color: #fff;
 }
 
@@ -1024,7 +1058,7 @@ body.bp-nouveau .activity-update-form .rtmedia-plupload-container {
 }
 
 .media .rtm-tabs li.active a {
-    color: var(--color-link-active);
+    color: var(--color-theme-primary);
 }
 
 .media .rtm-tabs-content {
@@ -1586,6 +1620,10 @@ body.activity-permalink .activity-list li:first-child {
     padding-left: 0;
 }
 
+.buddypress-wrap .activity-comments .acomment-meta a:not(.activity-time-since) {
+    font-weight: 600;
+}
+
 .buddypress-wrap .activity-comments .acomment-content {
     border-left: 0;
     margin: 0 0 0 51px;
@@ -2058,7 +2096,12 @@ li.load-more a.loading::after {
     display: none;
 }
 
-.buddypress-wrap .grid.bp-list>li .list-wrap .item-avatar {
+.buddypress-wrap .grid.bp-list>li .list-wrap .buddyx-mem-cover-wrapper+.item-avatar {
+    margin-top: -80px;
+    margin-bottom: 15px;
+}
+
+.buddypress-wrap .grid.bp-list>li .list-wrap .buddyx-grp-cover-wrapper+.item-avatar {
     margin-top: -80px;
     margin-bottom: 15px;
 }
@@ -2193,7 +2236,7 @@ li.load-more a.loading::after {
 
     .buddypress-wrap .tabbed-links ol li.current a,
     .buddypress-wrap .tabbed-links ul li.current a {
-        color: var(--color-link-active);
+        color: var(--color-theme-primary);
     }
 
     .buddypress-wrap .tabbed-links ol.group-create-buttons li.current a {
@@ -2652,6 +2695,11 @@ body.profile_page_bp-profile-edit.modal-open #TB_ajaxContent p.warning {
     }
 }
 
+.buddypress-wrap .main-navs:not(.dir-navs) li.current a,
+.buddypress-wrap .main-navs:not(.dir-navs) li.selected a {
+    color: var(--color-theme-primary);
+}
+
 @media screen and (max-width: 46.8em) {
 
     .buddypress-wrap #group-list.bp-list .accept,
@@ -2770,12 +2818,12 @@ body.profile_page_bp-profile-edit.modal-open #TB_ajaxContent p.warning {
 
     nav#object-nav.vertical .selected>a {
         background: rgba(77, 92, 109, .1);
-        color: var(--color-link-active);
+        color: var(--color-theme-primary);
     }
 
     nav#object-nav.vertical a:hover {
         background: rgba(77, 92, 109, .1);
-        color: var(--color-link-active);
+        color: var(--color-theme-primary);
     }
 
     .bp-single-vert-nav .item-body:not(#group-create-body) #subnav:not(.tabbed-links) {
@@ -2788,7 +2836,7 @@ body.profile_page_bp-profile-edit.modal-open #TB_ajaxContent p.warning {
     }
 
     .bp-single-vert-nav .item-body:not(#group-create-body) #subnav:not(.tabbed-links) li.current a {
-        color: var(--color-link-active);
+        color: var(--color-theme-primary);
         text-decoration: none;
     }
 
@@ -3173,7 +3221,7 @@ button#bp-delete-avatar {
 }
 
 .buddypress.widget .item-options a.selected {
-    color: var(--color-link-active);
+    color: var(--color-theme-primary);
 }
 
 .buddypress-wrap .buddypress.widget:after,
@@ -3381,9 +3429,9 @@ button#bp-delete-avatar {
 .widget .bp-block-group.has-description .bp-profile-button a.button {
     font-family: inherit;
     font-size: medium;
-    color: #fff;
-    background-color: var(--button_background_color);
-    border-radius: var(--button-border-radius)!important;
+    color: var(--button-text-color);
+    background-color: var(--button-background-color);
+    border-radius: var(--button-border-radius) !important;
     padding: 8px 20px;
     font-weight: 700;
     font-style: normal;
@@ -3392,7 +3440,7 @@ button#bp-delete-avatar {
     cursor: pointer;
     display: inline-block;
     line-height: 1.3;
-    border: 1px solid var(--button_border_color);
+    border: 1px solid var(--button-border-color);
     outline: 0;
     vertical-align: middle;
     -webkit-appearance: none;
@@ -3404,9 +3452,9 @@ button#bp-delete-avatar {
 
 .widget .bp-block-member .bp-profile-button a.button:hover,
 .widget .bp-block-group.has-description .bp-profile-button a.button:hover {
-    background-color: var(--button_background_hover_color);
-    border: 1px solid var(--button_border_hover_color);
-    color: #fff;
+    background-color: var(--button-background-hover-color);
+    border: 1px solid var(--button-border-hover-color);
+    color: var(--button-text-hover-color);
 }
 
 /*--------------------------------------------------------------
@@ -5008,7 +5056,7 @@ div.mpp-bulk-edit-media-action-row select {
 }
 
 .mpp-menu a.mpp-selected-item {
-    color: var(--color-link-active);
+    color: var(--color-theme-primary);
 }
 
 
@@ -5621,8 +5669,8 @@ body.personal.attachments #bp-media-library .components-button.is-tertiary,
 body.personal.attachments #bp-media-library .split-button .split-button-toggle {
     font-family: inherit;
     font-size: initial;
-    color: #fff !important;
-    background-color: var(--button_background_color) !important;
+    color: var(--button-text-color) !important;
+    background-color: var(--button-background-color) !important;
     border-radius: var(--button-border-radius) !important;
     font-weight: 700;
     font-style: normal;
@@ -5632,7 +5680,7 @@ body.personal.attachments #bp-media-library .split-button .split-button-toggle {
     display: inline-block;
     max-height: 100% !important;
     line-height: 1.3;
-    border: 1px solid var(--button_border_color) !important;
+    border: 1px solid var(--button-border-color) !important;
     outline: 0;
     vertical-align: middle;
     -webkit-appearance: none;
@@ -5655,9 +5703,9 @@ body.personal.attachments #bp-media-library .components-button.is-tertiary:hover
 .components-button.is-secondary:hover,
 .components-button.is-tertiary:hover,
 body.personal.attachments #bp-media-library .split-button .split-button-toggle:hover {
-    background-color: var(--button_background_hover_color) !important;
-    border: 1px solid var(--button_border_hover_color) !important;
-    color: #fff !important;
+    background-color: var(--button-background-hover-color) !important;
+    border: 1px solid var(--button-border-hover-color) !important;
+    color: var(--button-text-hover-color) !important;
 }
 
 body.personal.attachments #bp-media-library .wp-filter .view-switch a:before {
