UI updates and multivendorx support

--- a/assets/css/_custom-properties.css
+++ b/assets/css/_custom-properties.css
@@ -26,17 +26,27 @@
     --color-theme-white: #ecf0f1;
     --color-custom-daylight: #97c0b7;
     --color-custom-sun: #eee9d1;
+    --color-site-title: #111111;
     --color-site-title-hover: #ee4036;
+    --color-site-tagline: #757575;
     --color-theme-body: #f7f7f9;
     --color-layout-boxed: #fff;
     --color-theme-white-box: #fff;
     --global-body-lightcolor: #fafafa;
     --color-header-bg: #fff;
+    --color-menu: #111111;
     --color-menu-hover: #ee4036;
     --color-menu-active: #ee4036;
+    --color-subheader-title: #111111;
     --color-link: #111;
     --color-link-hover: #ef5455;
     --color-link-active: #ef5455;
+    --color-h1: #111111;
+    --color-h2: #111111;
+    --color-h3: #111111;
+    --color-h4: #111111;
+    --color-h5: #111111;
+    --color-h6: #111111;
     --global-border-color: #e8e8e8;
     --button-text-color: #fff;
     --button-text-hover-color: #fff;
