--- a/assets/css/_typography.css
+++ b/assets/css/_typography.css
@@ -38,26 +38,32 @@ h6 {
 
 h1 {
     font-size: 30px;
+    color: var(--color-h1);
 }
 
 h2 {
     font-size: 24px;
+    color: var(--color-h2);
 }
 
 h3 {
     font-size: 22px;
+    color: var(--color-h3);
 }
 
 h4 {
     font-size: 20px;
+    color: var(--color-h4);
 }
 
 h5 {
     font-size: 18px;
+    color: var(--color-h5);
 }
 
 h6 {
     font-size: 16px;
+    color: var(--color-h6);
 }
 
 .entry-header h1.entry-title,
