--- a/assets/css/comments.css
+++ b/assets/css/comments.css
@@ -32,11 +32,11 @@
     position: relative;
     margin: 1rem 0 30px;
     padding: 1em;
-    border: 1px solid #e8e8e8;
+    border: 1px solid var(--global-border-color);
     -webkit-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
     border-radius: var(--global-border-radius);
-    background: #fff;
+    background: var(--color-theme-white-box);
 }
 
 .children {
