--- a/assets/css/dokan.css
+++ b/assets/css/dokan.css
@@ -55,7 +55,7 @@
 }
 
 .dokan-dashboard.dokan-dashboard .dokan-dashboard-content {
-    background: #fff;
+    background: var(--color-theme-white-box);
     padding: 15px;
     border: 1px solid var(--global-border-color);
 }
@@ -336,10 +336,10 @@ body.buddyx-dokan.woocommerce-account ul li.woocommerce-MyAccount-navigation-lin
     margin: 1rem 0;
     margin-bottom: 30px;
     padding: 1em;
-    border: 1px solid #e8e8e8;
+    border: 1px solid var(--global-border-color);
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
     border-radius: var(--global-border-radius);
-    background: #fff;
+    background: var(--color-theme-white-box);
 }
 
 .dokan-widget-area .widget:last-child {
