--- a/assets/css/eventscalendar.css
+++ b/assets/css/eventscalendar.css
@@ -221,7 +221,7 @@ ul.tribe-events-sub-nav {
     border: 1px solid var(--global-border-color);
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
     border-radius: var(--global-border-radius);
-    background: #fff;
+    background: var(--color-theme-white-box);
 }
 
 .tribe-common.tribe-events.tribe-events-widget-shortcode .widget-title {
