--- a/assets/css/learnpress.css
+++ b/assets/css/learnpress.css
@@ -526,11 +526,11 @@ ul.learn-press-nav-tabs .course-nav a:after {
 
 #learn-press-user-profile {
     position: relative;
-    border: 1px solid #e8e8e8;
+    border: 1px solid var(--global-border-color);
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
     border-radius: var(--global-border-radius);
     margin-top: 1em;
-    background: #fff;
+    background: var(--color-theme-white-box);
 }
 
 #learn-press-user-profile #learn-press-profile-header {
@@ -775,7 +775,7 @@ ul.learn-press-nav-tabs .course-nav a:after {
     position: relative;
     margin-bottom: 30px;
     padding: 1em;
-    background: #fff;
+    background: var(--color-theme-white-box);
     border: 1px solid var(--global-border-color);
     box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
     border-radius: var(--global-border-radius) !important;
