--- a/assets/css/wc-vendor.css
+++ b/assets/css/wc-vendor.css
@@ -122,7 +122,7 @@
     -webkit-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
     border-radius: var(--global-border-radius);
-    background: #fff;
+    background: var(--color-theme-white-box);
     overflow: hidden;
 }
 
@@ -325,7 +325,7 @@ table.table-condensed tr:nth-child(even) td {
 
 .wcv_shop_description {
     position: relative;
-    background: #fff;
+    background: var(--color-theme-white-box);
     border: 1px solid var(--global-border-color);
     border: 1px solid var(--global-border-color);
     border-radius: var(--global-border-radius);
