--- a/assets/css/woocommerce.css
+++ b/assets/css/woocommerce.css
@@ -145,7 +145,7 @@
 .woocommerce ul.products li.product,
 .woocommerce-page ul.products li.product {
     position: relative;
-    background: #fff;
+    background: var(--color-theme-white-box);
     border: 1px solid var(--global-border-color);
     border-radius: var(--global-border-radius);
     box-shadow: none;
@@ -247,11 +247,11 @@
     min-width: 1.75em;
     line-height: 1.5;
     text-align: center;
-    background: #fff!important;
+    background: #fff !important;
     font-weight: 400;
     border-radius: .28571429rem;
     text-transform: none;
-    text-shadow: none!important;
+    text-shadow: none !important;
     box-shadow: inset 0 0 0 1px #e8e8e8;
     padding: 10px 15px;
     text-decoration: none;
@@ -276,7 +276,7 @@
     border: 1px solid var(--global-border-color);
     box-shadow: none;
     border-radius: var(--global-border-radius);
-    background: #fff;
+    background: var(--color-theme-white-box);
     height: 100%;
 }
 
@@ -318,6 +318,11 @@
     padding: 5px;
 }
 
+.woocommerce div.product form.cart .button,
+.woocommerce-page div.product form.cart .button {
+    margin: 0 12px 12px 0;
+}
+
 .woocommerce div.product .woocommerce-tabs ul.tabs li.active a {
     color: var(--color-theme-primary);
 }
@@ -351,12 +356,13 @@
 .woocommerce-page div.product .woocommerce-tabs .panel {
     margin: 0 0 2em;
     padding: 1.5em;
-    background: #fff;
+    background: var(--color-theme-white-box);
     border: 1px solid var(--global-border-color);
     border-radius: var(--global-border-radius);
 }
 
 @media only screen and (max-width: 767px) {
+
     .woocommerce div.product .woocommerce-tabs .panel,
     .woocommerce-page div.product .woocommerce-tabs .panel {
         padding: 1em;
@@ -409,6 +415,11 @@
 
 .woocommerce-page div.product .woocommerce-tabs .panel ol.commentlist {
     padding-left: 0;
+}
+
+.woocommerce #reviews #comments ol.commentlist li .comment-text {
+    background: var(--color-theme-white-box);
+    border-color: var(--global-border-color);
 }
 
 .woocommerce #reviews #comments ol.commentlist li img.avatar {
@@ -492,7 +503,7 @@
 .woocommerce-cart .cart-collaterals .cart_totals table,
 .woocommerce-checkout .cart-collaterals .cart_totals table,
 form.woocommerce-cart-form {
-    background: #fff;
+    background: var(--color-theme-white-box);
 }
 
 form.woocommerce-cart-form {
@@ -508,7 +519,7 @@ form.woocommerce-cart-form {
     border: 1px solid var(--global-border-color);
     box-shadow: none;
     border-radius: var(--global-border-radius);
-    background: #fff;
+    background: var(--color-theme-white-box);
 }
 
 #add_payment_method .wc-proceed-to-checkout a.checkout-button,
@@ -551,7 +562,7 @@ form.woocommerce-cart-form {
     -webkit-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
     border-radius: var(--global-border-radius);
-    background: #fff;
+    background: var(--color-theme-white-box);
 }
 
 .select2-container.select2-container--default span.select2-choice,
@@ -616,6 +627,13 @@ form.woocommerce-cart-form {
 /*--------------------------------------------------------------
 # My Account Page
 --------------------------------------------------------------*/
+.woocommerce form.checkout_coupon,
+.woocommerce form.login,
+.woocommerce form.register {
+    background: var(--color-theme-white-box);
+    border: 1px solid var(--global-border-color);
+    border-radius: var(--global-border-radius);
+}
 
 .woocommerce .entry-content:not(.wc-tab) ol,
 .woocommerce-page .entry-content:not(.wc-tab) ol,
@@ -635,7 +653,7 @@ form.woocommerce-cart-form {
     -webkit-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
     border-radius: var(--global-border-radius);
-    background: #fff;
+    background: var(--color-theme-white-box);
 }
 
 .woocommerce-account .woocommerce-MyAccount-content .woocommerce-Button.button {
