--- a/assets/css/dokan.css
+++ b/assets/css/dokan.css
@@ -7,7 +7,7 @@
 # Single Store
 # My Account
 # Widgets
-	
+# Vendor Registration
 --------------------------------------------------------------*/
 
 
@@ -99,10 +99,12 @@ button.mfp-arrow {
 }
 
 @media (max-width: 767px) {
+
     .dokan-product-listing .dokan-product-listing-area .dokan-w8,
     .dokan-product-listing .dokan-product-listing-area .dokan-w5 {
         width: 100%;
     }
+
     .dokan-dashboard .dokan-product-listing .dokan-product-listing-area .product-listing-top span.dokan-add-product-link {
         display: block;
         width: 100%;
@@ -116,20 +118,25 @@ button.mfp-arrow {
         float: none;
         margin-right: 0;
     }
+
     .dokan-dashboard.dokan-dashboard .dokan-product-listing .dokan-product-listing-area .dokan-product-date-filter {
         display: block;
     }
+
     .dokan-dashboard.dokan-dashboard .dokan-product-listing .dokan-product-listing-area .dokan-product-date-filter .dokan-form-group {
         margin-bottom: 15px;
     }
+
     .dokan-dashboard.dokan-dashboard .dokan-dash-sidebar article,
     .dokan-dashboard.dokan-dashboard .dokan-dashboard-content article {
         overflow: unset;
         overflow-x: auto;
     }
+
     .dokan-product-listing select#filter-by-type.dokan-form-control {
         max-width: 100% !important;
     }
+
     .dokan-dashboard.dokan-dashboard .dokan-product-listing .dokan-product-listing-area .dokan-product-search-form {
         margin: 15px 0;
         width: 100%;
@@ -137,6 +144,7 @@ button.mfp-arrow {
         flex-direction: row-reverse;
         justify-content: flex-end;
     }
+
     .dokan-dashboard.dokan-dashboard .dokan-product-listing .dokan-product-listing-area .dokan-product-search-form .dokan-form-group {
         width: 100%;
     }
@@ -214,6 +222,26 @@ button.mfp-arrow {
     }
 }
 
+@media (min-width: 1200px) {
+
+    .dokan-single-store .profile-frame .profile-info-box.profile-layout-default .profile-info-summery-wrapper {
+        position: absolute;
+    }
+
+    .dokan-single-store .dokan-store-tabs.dokan-store-tabs {
+        position: relative;
+        background-color: var(--color-theme-white-box);
+    }
+}
+
+.dokan-single-store .profile-frame .profile-info-box.profile-layout-layout1 .profile-info-summery-wrapper {
+    border-bottom: 0;
+}
+
+.dokan-single-store .profile-frame.profile-frame-no-banner .profile-layout-layout3 .profile-info-summery-wrapper .profile-info-summery.profile-info-summery {
+    background-color: transparent;
+}
+
 .dokan-single-store .profile-frame .profile-info-box .profile-info-summery-wrapper .profile-info-summery .profile-info-head .profile-img.profile-img-circle img {
     margin: auto;
 }
@@ -229,6 +257,7 @@ button.mfp-arrow {
 }
 
 .buddyx-dokan .dokan-single-store .dokan-store-tabs ul {
+    background: var(--color-theme-white-box);
     padding: 0 5px;
 }
 
@@ -263,18 +292,22 @@ button.mfp-arrow {
     .dokan-store-tabs .dokan-right {
         float: none !important;
     }
+
     .buddyx-dokan .dokan-single-store .dokan-store-tabs ul {
         padding: 15px;
     }
+
     .buddyx-dokan .dokan-single-store .dokan-store-tabs ul li {
         margin: 0 0 10px;
         text-align: center;
         width: 100%;
         border: 0;
     }
+
     .dokan-single-store .dokan-store-tabs ul li a {
         background: #f2f2f2;
     }
+
     .buddyx-dokan .dokan-single-store .dokan-store-tabs ul li a:not(.whatsapp-live-widget),
     .dokan-store-tabs ul li.dokan-share-btn-wrap .dokan-share-btn,
     .dokan-store-tabs .dokan-live-chat,
@@ -282,8 +315,11 @@ button.mfp-arrow {
     .dokan-store-tabs .dokan-follow-store-button {
         width: 100%;
     }
-}
 
+    .dokan-store-products-filter-area .dokan-store-products-ordeby input.search-store-products {
+        padding: 0;
+    }
+}
 
 /* Store Review */
 
@@ -373,4 +409,30 @@ body.buddyx-dokan.woocommerce-account ul li.woocommerce-MyAccount-navigation-lin
     content: "";
     display: table;
     clear: both;
+}
+
+/*--------------------------------------------------------------
+# Vendor Registration
+--------------------------------------------------------------*/
+form#dokan-vendor-register {
+    position: relative;
+    margin: 0 0 30px;
+    padding: 1em;
+    border: 1px solid var(--global-border-color);
+    border-radius: var(--global-border-radius);
+    background: var(--color-theme-white-box);
+}
+
+form#dokan-vendor-register .form-group label {
+    display: block;
+}
+
+form#dokan-vendor-register .form-group input {
+    width: 100%;
+}
+
+.dps-pack {
+    margin-bottom: 20px;
+    padding: 1rem;
+    background: var(--global-body-lightcolor);
 }
